chnaging the website

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 
      <!-- Required Meta Tags -->
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- SEO Meta Tags -->
 <title>FlipKart Careers – Jobs, Internships, and Career Opportunities</title>
@@ -173,7 +173,7 @@
                 </div>
 
                 <div>
-                    <label for="resume">Date of Birth</label> <br>
+                    <label for="resume">upload your resume</label> <br>
                     <input type="file" id="resume" name="resume" required>
                 </div>
 
