about flipkart app

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         <img id="banner" src="image1.png" alt="carrier">
     </div>
 
-    <h2 class="about">About flipkart app</h2>
+    <h2 class="about">About flipkart App</h2>
     <div id="about">
         <div id="description">
             <p style="margin-top: 0;"> ipsum dolor sit amet consectetur adipisicing elit. Neque nam, corporis saepe
