--- a/src/index.html
+++ b/src/index.html
@@ -1,217 +1,235 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>job portal of flipkart </title>
-     <link rel="icon" href="icon.png" type="image/x-icon">
-
-     <!-- Required Meta Tags -->
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- SEO Meta Tags -->
-<title>FlipKart Careers – Jobs, Internships, and Career Opportunities</title>
-<meta name="description" content="Explore job opportunities at FlipKart. Apply now for roles in technology, product, design, and operations. Build your career with us.">
-<meta name="keywords" content="Flipkart jobs, careers, job portal, ecommerce jobs, software engineer jobs, Flipkart hiring, Flipkart internship">
-<meta name="author" content="Flipkart Careers Team">
-<meta name="robots" content="index, follow">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about job openings at Jovian and submit your application now">
+    <meta name="keywords" content="data science, software development, jobs">
+    <meta name="author" content="Jovian">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Jovian Careers">
+    <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
+    <meta property="og:image" content="/jovian_meta.png">
+    <meta name="twitter:title" content="Jovian Careers">
+    <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
+    <meta name="twitter:image" content="/jovian_meta.png">
 
 
-<!-- Mobile Optimization -->
-<meta name="theme-color" content="#2874F0">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:title" content="Join Flipkart Careers – Find Your Dream Job">
-<meta property="og:description" content="Discover exciting job roles and internship programs at Flipkart. Shape your future with us.">
-<meta property="og:image" content="og.png">
-<meta property="og:url" content="https://careers.flipkart.com/">
-<meta property="og:type" content="website">
-
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Join Flipkart – Build a Career That Matters">
-<meta name="twitter:description" content="Apply for jobs in product, engineering, business, and more at Flipkart.">
-<meta name="twitter:image" content="og.png">
-<meta name="twitter:site" content="@Flipkart">
-
-
-    <!--google font Roboto-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <!--google font inter-->
+    <title>Jovian Careers | Responsive Site</title>
+    <link rel="icon" href="/jovian_favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
-
-
-    <meta http-equiv="refresh" content="30">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div id="navbar">
-        <img id="logo" src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AA1vl9Fc.img" alt="flipkart logo">
-        <span id="name"><strong>flipkart</strong></span>
-
+        <img id="logo" alt="Jovian Logo" src="https://i.imgur.com/JRA5Q8a.png" height="30" />
+        <img id="logo-with-text" alt="Jovian Logo" src="https://i.imgur.com/m1wXjqw.png" height="30" />
     </div>
+    <img id="banner" src="banner.jpg" alt="Banner">
 
+    <h1>
+        About Jovian
+    </h1>
 
-    <div>
-        <img id="banner" src="image1.png" alt="carrier">
-    </div>
-
-    <h2 class="about">About flipkart App</h2>
     <div id="about">
         <div id="description">
-            <p style="margin-top: 0;"> ipsum dolor sit amet consectetur adipisicing elit. Neque nam, corporis saepe
-                alias veniam repudiandae deserunt nemo vero. Veniam illum voluptas a repellat tempore excepturi expedita
-                quod culpa possimus nisi! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem rem
-                totam impedit repudiandae vel tenetur ullam perferendis magnam autem quasi temporibus nemo incidunt sed
-                quam laborum accusamus, id labore aut? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-                provident hic temporibus omnis vitae impedit eveniet error blanditiis nemo debitis. Alias quidem
-                maiores, adipisci sapiente autem nulla saepe porro illum nam perspiciatis. Ut.</p>
+            <p style="margin-top: 0;">
+                At Jovian, we're on a mission to build
+                the world's most highly reputed technical
+                university, and we're building it completely
+                online. We offer several beginner friendly
+                courses that are taken by 300,000+ registered
+                users.
+            </p>
+            <p>
+                We also offer 2 industry-focused bootcamps:
+            <ol>
+                <li>
+                    <a href="https://www.jovian.com/full-stack-developer-bootcamp">
+                        Jovian Full Stack Developer Bootcamp
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.jovian.com/data-science-bootcamp">
+                        Jovian Data Science Bootcamp
+                    </a>
+                </li>
+            </ol>
+            </p>
         </div>
-
-
-
-
-
-        
-
         <div id="team">
-            <img id="team-iamge" src="image2.png" alt="team" height="210">
+            <img id="team-image" alt="Team" src="team.jpg">
         </div>
     </div>
 
-    <h3 style="text-align: center;">job apportunities</h3>
+
+
+
+
+    <h2>Employment Opportunities</h2>
     <div id="jobs">
-        <div>
-            <div>
-                <table id="job-table">
-                    <tr class="jobs-header-row">
-                        <th>job title</th>
-                        <th>salary</th>
-                        <th>posted on</th>
-                        <th>location</th>
-                    </tr>
-
-                    <tr class="job-data-row">
-                        <td>software Developer</td>
-                        <td>12000</td>
-                        <td>25 june 2025</td>
-                        <td>pune</td>
-                    </tr>
-
-                    <tr class="job-data-row">
-                        <td>data analytics </td>
-                        <td>12000</td>
-                        <td>28 june 2025</td>
-                        <td>delhi</td>
-                    </tr>
-
-                    <tr class="job-data-row">
-                        <td>software enginne</td>
-                        <td>12345678</td>
-                        <td>29 may 2025</td>
-                        <td>nagpur</td>
-                    </tr>
-
-                    <tr class="job-data-row">
-                        <td>watchman</td>
-                        <td>1244523452</td>
-                        <td>19 june 2034</td>
-                        <td>village</td>
-                    </tr>
-
-                </table>
-
+        <div id="jobs-list">
+            <div class="job">
+                <div class="job-title">Frontend Developer</div>
+                <div class="job-detail">Bengaluru, India</div>
+                <div class="job-detail">₹ 12,00,000</div>
+                <div class="job-detail">Posted Mar 3, 2023</div>
+            </div >
+            <div class="job">
+                <div class="job-title">Full Stack Developer</div>
+                <div class="job-detail">New Delhi, India</div>
+                <div class="job-detail">₹ 15,00,000</div>
+                <div class="job-detail">Posted Feb 1, 2023</div>
+            </div>
+            <div class="job">
+                <div class="job-title">Data Scientist</div>
+                <div class="job-detail">San Francisco, USA</div>
+                <div class="job-detail">$175,000</div>
+                <div class="job-detail">Posted Dec 22, 2022</div>
+            </div>
+            <div class="job">
+                <div class="job-title">ML Engineer</div>
+                <div class="job-detail">Remote</div>
+                <div class="job-detail">$80,000</div>
+                <div class="job-detail">Posted Sep 19, 2022</div>
             </div>
         </div>
-        <div id="application">
-            <h2>submit your application </h2>
 
-            <form id="application-form" action="https://formbold.com/s/94lP7" method="POST">
+        <table id="jobs-table">
+            <tr class="jobs-header-row">
+                <th rowspan="2">Job Title</th>
+                <th colspan="2">Location</th>
+                <th rowspan="2">Salary</th>
+                <th rowspan="2">Posted On</th>
+            </tr>
+            <tr class="jobs-header-row">
+                <th>City</th>
+                <th>Country</th>
+            </tr>
+            <tr class="jobs-data-row">
+                <td>Frontend Developer</td>
+                <td>Bengaluru</td>
+                <td>India</td>
+                <td>₹12,00,000</td>
+                <td>Mar 3, 2023</td>
+            </tr>
 
-                <div>
-                    <label for="applyer-name">Enter Name </label> <br>
-                    <input type="text" id="applyer-name" name="applyer-name" required
-                        placeholder="your-name middle-name surname">
-                </div>
+            <tr class="jobs-data-row">
+                <td>Full Stack Developer</td>
+                <td>New Delhi</td>
+                <td>India</td>
+                <td>₹15,00,000</td>
+                <td>Feb 1, 2023</td>
+            </tr>
 
-                <div>
-                    <label for="email">Enter email</label> <br>
-                    <input type="text" id="email" name="email" required placeholder="example@gmail.com">
-                </div>
+            <tr class="jobs-data-row">
+                <td>Data Scientist</td>
+                <td>San Francisco</td>
+                <td>USA</td>
+                <td>$175,000</td>
+                <td>Dec 22, 2022</td>
+            </tr>
 
-                <div>
-                    <label for="phone">Enter phone</label> <br>
-                    <input type="text" id="phone" name="phone" required placeholder="+918010236068">
-                </div>
+            <tr class="jobs-data-row">
+                <td>ML Engineer</td>
+                <td colspan="2">Remote</td>
+                <td>$80,000</td>
+                <td>Sep 19, 2022</td>
+            </tr>
 
-                <div>
-                    <label for="date">Date of Birth</label> <br>
-                    <input type="date" id="date" name="date" required>
-                </div>
+        </table>
+    </div>
 
-                <div>
-                    <label>position applied for </label> <br>
-                    <select id="position-applied-for" name="jobs" required>
-                        <option value="#">--select--</option>
-                        <option value="#">data analytics </option>
-                        <option value="#">software engineer</option>
-                        <option value="#">watchman</option>
-                    </select>
+    <div id="application">
+        <h2>Submit Your Application</h2>
 
-                </div>
+        <form id="application-form" action="https://formbold.com/s/3wvKl" method="POST" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="name">Full Name</label><br>
+                <input type="text" id="name" name="Full Name" required placeholder="John Doe">
+            </div>
 
-                <div>
-                    <label for="resume">upload your resume</label> <br>
-                    <input type="file" id="resume" name="resume" required>
-                </div>
+            <div class="form-group">
+                <label for="email">Email</label><br>
+                <input type="email" id="email" name="Email Address" required placeholder="jdoe@example.com">
+            </div>
 
-                <div>
-                    <label for="message">cover letter</label> <br>
-                    <textarea id="message" name="message" rows="5" required
-                        placeholder="Explaine what makes you more suitable for this job"></textarea>
-                </div>
+            <div class="form-group">
+                <label for="phone">Phone</label><br>
+                <input type="tel" id="phone" name="phone" required placeholder="+919898989898">
+            </div>
 
-                <div>
-                    <label for="terms">
-                        <input type="checkbox" id="terms" name="terms">
-                        accept the terms and condition
-                </div>
+            <div class="form-group">
+                <label for="dob">Date of Birth</label><br>
+                <input type="date" id="dob" name="dob" required>
+            </div>
+
+            <div class="form-group">
+                <label for="position">Position Applied for</label><br>
+                <select id="position" name="Position Applied" required>
+                    <option value="">Select position</option>
+                    <option value="frontend developer">Frontend Developer</option>
+                    <option value="full stack developer">Full Stack Developer</option>
+                    <option value="data scientist">Data Scientist</option>
+                    <option value="ml engineer ">ML Engineer</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="resume">Upload Resume</label><br>
+                <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" required>
+            </div>
+
+            <div class="form-group">
+                <label for="coverletter">Cover Letter</label><br>
+                <textarea id="coverletter" name="coverletter" rows="5"
+                    placeholder="Explain what makes you suitable for the job.."></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="terms">
+                    <input type="checkbox" id="terms" name="terms" required>
+                    I agree to the terms and conditions
+                </label>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Submit Application">
+            </div>
+
+        </form>
+
+    </div>
 
 
-                <div>
-                    <input type="submit" value="Apply">
-                </div>
 
-            </form>
-        </div>
+    <div id="footer">
+        <ul id="footer-links">
+            <li>
+                <a href="https://jovian.com/learn" target="_blank">
+                    Courses
+                </a>
+            </li>
+            <li>
+                <a href="https://jovian.com/learn" target="_blank">
+                    Programs
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com/@jovianhq" target="_blank">
+                    YouTube
+                </a>
+            </li>
+        </ul>
+        <span class="copyright">© 2023, Jovian </span>
+    </div>
 
 </body>
 
-<footer id="footer">
-    <div>
-        <ul>
-            <li>courses</li>
-            <li>programs</li>
-            <li>youtube</li>
-        </ul>
-    </div>
-
-    <div>
-        <p id="copyrigth"> © @Akash all rights reserve </p>
-    </div>
-
-</footer>
-
-</html>
+</html> 
